--- a/app/views/about/_features.html.haml
+++ b/app/views/about/_features.html.haml
@@ -4,7 +4,7 @@
     .text
       %iframe{ :src => "https://clips.twitch.tv/embed?clip=FaithfulAmericanSwordPeoplesChamp&muted=true", :scrolling => "no", :height => "100%", :width => "110%", :style => "margin: 0 auto 20px;" }
     .visual
-      = fa_icon 'fw play'
+      = fa_icon 'fw video-camera'
 
   .features-list__row
     .text
