--- a/app/javascript/styles/custom.scss
+++ b/app/javascript/styles/custom.scss
@@ -68,7 +68,7 @@
   text-decoration: none;
 }
 
-.trend-tags__header {
+.tags__header {
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -78,12 +78,19 @@
   font-size: 16px;
 }
 
-.trend-tags__header__icon {
+.twitch-tags {
+  //margin: auto 0 10px;
+  .twitch-label {
+    background: #4B367C;
+  }
+}
+
+.tags__header__icon {
   width: 20px;
   margin-right: 7px;
 }
 
-.trend-tags__header__name {
+.tags__header__name {
   flex: 1;
 }
 
