--- a/app/javascript/styles/custom.scss
+++ b/app/javascript/styles/custom.scss
@@ -30,8 +30,7 @@
       #mastodon-timeline {
         width: 350px;
       }  
-    }
-  }
+    } }
 }
 
 // top page
@@ -117,4 +116,21 @@ ul.status__content {
   }    
 }
 
+.simple_form .input-with-append .input input {
+    padding-right: 0;
+}
+
+.video {
+  position: relative;
+  height: 0;
+  padding: 30px 0 56.25%;
+  overflow: hidden;
+}
+.video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
