Switch to playhearthstonejp

--- a/app/views/about/more.html.haml
+++ b/app/views/about/more.html.haml
@@ -36,7 +36,7 @@
 
       .container.hero
         .heading
-          %h3= Hearthtodon
+          %h3 Hearthtodon
           %p= @instance_presenter.site_description.html_safe.presence || t('about.generic_description', domain: site_hostname)
 
   .information-board
