--- a/app/views/about/show.html.haml
+++ b/app/views/about/show.html.haml
@@ -34,7 +34,7 @@
       .container.hero
         .heading
           %h1
-            = @instance_presenter.site_title
+            Hearthtodon
             %small= t('about.hosted_on')
         - if @instance_presenter.open_registrations
           = render 'registration'
