--- a/app/javascript/styles/custom.scss
+++ b/app/javascript/styles/custom.scss
@@ -30,7 +30,8 @@
       #mastodon-timeline {
         width: 350px;
       }  
-    } }
+    } 
+  }
 }
 
 // top page
@@ -41,14 +42,36 @@
 
   .header-wrapper {
     background-image: url('../images/kotfz_wallpaper.jpg');
-    background-repeat: repeat-y;
-    background-position: center 55%;
-    background-size: auto auto;
+    background-repeat-y: no-repeat;
+
+    @media screen and (min-width: 1025px) {
+      background-position: center 55%;
+      background-size: auto auto;
+    }
+
+    @media screen and (max-width: 1024px) {
+      background-position: center;
+      background-size: auto 70%;
+    }
 
     .nav a {
       text-shadow: 1px 1px 10px #000000;
     }
   }    
+
+  @media screen and (min-width: 1025px) {
+    .header-wrapper:after {
+      position: absolute;
+      display: block;
+      content: "";
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      box-shadow: inset 80px 10px 50px rgba(23, 25, 31, 1.0), inset -80px -10px 50px rgba(23, 25, 31, 1.0);
+    }    
+  }
 
   .header-wrapper h1 {
     text-shadow: 2px 2px 2px #000000;
