Implement insert tag button

--- a/app/javascript/styles/custom.scss
+++ b/app/javascript/styles/custom.scss
@@ -124,6 +124,12 @@
   margin-right: 7px;
 }
 
+.tags_add {
+  margin-right: 0;
+  padding-left: 6px;
+  margin-left: 5px;
+}
+
 .tags__header__name {
   flex: 1;
 }
