Update logo full

--- a/app/javascript/styles/custom.scss
+++ b/app/javascript/styles/custom.scss
@@ -172,3 +172,8 @@ ul.status__content {
 .landing-page .header .links .brand img {
     height: 60px;
 }
+
+.logo-container h1 img {
+    height: 100px;
+    margin-right: 0;
+}
