--- a/app/javascript/styles/custom.scss
+++ b/app/javascript/styles/custom.scss
@@ -201,3 +201,64 @@ ul.status__content {
   padding-bottom: 0;
   background: none;
 }
+
+.announcements {
+  margin-bottom: 10px;
+  @media screen and (max-width: 1024px) {
+    padding: 0 10px;
+  }
+
+  li {
+    display: flex;
+    padding: 10px;
+    color: $ui-base-color;
+    background: darken($primary-text-color, 8%);
+    border-radius: 4px;
+
+    & + li {
+      margin-top: 10px;
+    }
+  }
+}
+
+.announcements__icon {
+  flex: 0 0 auto;
+  border-radius: 5%;
+  display: inline-block;
+  overflow: hidden;
+  width: 30px;
+  height: 30px;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.announcements__body {
+  width: 100%;
+
+  p {
+    padding-left: 5px;
+    font-size: 12px;
+  }
+}
+
+.announcements__link {
+  display: inline-block;
+  color: $ui-base-color;
+  text-decoration: none;
+  padding: 1px 10px 0;
+  border: solid 1px $ui-base-color;
+  font-size: 10px;
+  font-weight: 600;
+  border-radius: 4px;
+  margin-top: 5px;
+  margin-right: 3px;
+}
+
+.announcements__body__dismiss {
+  float: right;
+}
+
+
