--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,6 +33,12 @@
     = csrf_meta_tags
 
     = yield :header_tags
+    = javascript_include_tag "https://www.googletagmanager.com/gtag/js?id=UA-106593538-1", :async => true
+    :javascript
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+      gtag('config', 'UA-106593538-1');
 
   - body_classes ||= @body_classes || ''
   - body_classes += ' system-font' if current_account&.user&.setting_system_font_ui
